# Noir

./: .gitignore  .venv  Dockerfile  README.md  debug_lfr_ml.py  docker-compose.yml  main.py  model_testing.py  pygame_preview.py  pyproject.toml  tracker.py  vision_processor.py  web_server.py
.superpowers/brainstorm/240458-1774432842/: .server-stopped  features.html  ios26-final.html  ios26-shadcn.html  layout-no-video.html  particle-sphere.html  refined-ui.html  visual-style.html
.superpowers/brainstorm/278539-1774434914/: .server-stopped
backend/: main.py
backend/api/: __init__.py  robot.py
backend/config/: config.py
backend/esp32/: CMakeLists.txt  esp32_controller.ino  robot_comms.py  sdkconfig
backend/esp32/main/: CMakeLists.txt  main.c
backend/services/: llm_parser.py  robot_state.py  stt.py  tts.py  voice_pipeline.py  wake_word.py
esp32_controller/: esp32_controller.ino
jarvis_app/: pubspec.yaml
jarvis_app/android/: build.gradle
jarvis_app/android/app/: build.gradle
jarvis_app/android/app/src/main/: AndroidManifest.xml
jarvis_app/ios/Runner/: Info.plist
jarvis_app/ios/Runner.xcodeproj/: project.pbxproj
jarvis_app/lib/: boot_screen.dart  control_screen.dart  home_screen.dart  main.dart  settings_screen.dart  vision_screen.dart
jarvis_app/lib/models/: robot_state.dart
jarvis_app/lib/services/: audio_service.dart  socket_service.dart
jarvis_app/lib/widgets/: ios_widgets.dart  particle_visualizer.dart
jarvis_app/linux/: CMakeLists.txt  my_application.cc
jarvis_app/macos/Flutter/: GeneratedPluginRegistrant.swift
jarvis_app/macos/Runner.xcodeproj/: project.pbxproj
jarvis_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
jarvis_app/test/: widget_test.dart
jarvis_app/web/: index.html
pipeline/: __init__.py  command_queue.py  llm_parser.py  robot_state.py  stt.py  tts.py  voice_pipeline.py  wake_word.py
tests/: conftest.py
tests/e2e/: test_application_workflows.py  test_security.py  test_system_integration.py
tests/integration/: test_web_server.py
tests/unit/: test_robot_comms.py  test_robot_state.py  test_utils.py
utils/: __init__.py  cv_text.py  threading.py
(+1 files in other folders)
