[project]
name = "final-year-project"
version = "0.1.0"
description = "AI Assistant Bot – full STT→LLM→TTS+Actions pipeline with VLA vision and ESP32 motor control"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # ── Core CV + detection ─────────────────────────────────────────────────
    "opencv-python>=4.9",        # cv2 with GUI (imshow) support
    "ultralytics>=8.2",          # YOLOv8n human/object detection
    "numpy>=1.26",
    # ── Ollama REST API (VLA + LLM parser) ──────────────────────────────────
    "requests>=2.31",
    # ── Voice pipeline ───────────────────────────────────────────────────────
    "faster-whisper>=1.0",       # STT  – CUDA accelerated Whisper
    "pvporcupine>=3.0",          # Wake word – Porcupine by Picovoice (jarvis, alexa, etc.)
    "piper-tts>=1.4",            # TTS  – offline neural voices (amy-medium)
    "sounddevice>=0.4",          # Mic input + audio playback via PortAudio
    # Requires: sudo apt install portaudio19-dev
    # ── Mobile app / WebSocket ───────────────────────────────────────────────
    "flask-socketio>=5.3",       # WebSocket support for Flutter phone app
    "simple-websocket>=1.0",     # Fast threading-mode transport
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
robot = "main:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
    "--cov-report=json:coverage.json",
    "--cov-fail-under=25",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interactions",
    "e2e: End-to-end tests for full workflows",
    "slow: Tests that take a long time to run",
    "hardware: Tests that require physical hardware",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
